I made some small modifications